# InstaGeo-E2E-Geospatial-ML

./: .codespell-ignore.txt  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  deploy.sh  push_to_public_repo.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  start_app_stack.sh
.github/workflows/: deploy.yaml  tests_and_linters.yaml
.streamlit/: config.toml
docker/: Dockerfile  environment.yaml
experiments/: run.py
experiments/config/: default.yaml
experiments_dir/data/crop_segmentation/: us_cdl_instageo.sh  us_cdl_replica.sh
experiments_dir/data/flood_mapping/: sen1floods_replica.sh
experiments_dir/data/locusts/: locust_replica.sh
experiments_dir/train/crop_segmentation/: crop_class_replica.sh  cropclass2022.sh  cropclass2024.sh
experiments_dir/train/flood_mapping/: sen1floods_replica.sh
experiments_dir/train/locusts/: locust_replica.sh
instageo/: __init__.py
instageo/apps/: README.md  __init__.py  app.py  reporting.py  requirements.txt  tile_metadata.json  viz.py
instageo/apps/assets/: clientside.js  global.css
instageo/apps/utils/: consts.py  countries.py  country_code_to_mgrs_tiles.json  country_name_to_mgrs_tiles.json  styles.py
instageo/data/: README.md  __init__.py  chip_creator.py  data_cleaner.py  data_pipeline.py  data_splitter.py  flags.py  geo_utils.py  hls_pipeline.py  hls_utils.py  raster_chip_creator.py  requirements.txt  s1_utils.py  s2_pipeline.py  s2_utils.py  settings.py  stac_utils.py
instageo/model/: Prithvi.py  README.md  __init__.py  base.py  dataloader.py  factory.py  infer_utils.py  inference_pipeline.py  metrics.py  model.py  model_server.py  neptune_logger.py  old_model.py  pipeline_utils.py  pritvhi.py  regression.py  requirements.txt  run.py  segmentation.py  train.py  unet.py  utils.py
instageo/model/configs/: config.yaml  config_dataclasses.py  locust.yaml  multitemporal_crop_classification.yaml  sen1floods11.yaml
instageo/model/registry/: model_registry.py  model_registry_sync.sh
instageo/new_apps/: README.md  __init__.py  config.env.example  docker-compose.dev.yml  docker-compose.prod.yml  nginx.dev.conf  nginx.prod.conf  start.sh
instageo/new_apps/backend/: .gitignore  Dockerfile  Dockerfile.ci  README.md  __init__.py  config.env.example  requirements.txt
instageo/new_apps/backend/app/: __init__.py  auth.py  cog_converter.py  crud.py  data_processor.py  db.py  jobs.py  main.py  models.py  redis_client.py  settings.py  tasks.py  tiler_service.py
instageo/new_apps/backend/tests/: conftest.py  test_api.py  test_auth.py
instageo/new_apps/cloudflared/: config_template.yml
instageo/new_apps/frontend/: .gitignore  Dockerfile.ci  Dockerfile.dev  Dockerfile.prod  README.md  nginx.k8s.conf  package.json
instageo/new_apps/frontend/public/: 404.html  50x.html  index.html
instageo/new_apps/frontend/src/: App.js  auth0-config.js  config.js  constants.js  index.js  theme.js
instageo/new_apps/frontend/src/components/: Auth0Provider.js  BoundingBoxInfo.js  BoundingBoxSnapshot.js  ControlPanel.js  Footer.js  MapComponent.js  ProfileMenu.js  SupportDialog.js  TaskLayers.js  TaskLayersControl.js  TaskLayersControlWrapper.js  TaskResultPopup.js  TasksMonitor.js  VisualizationDialog.js
instageo/new_apps/frontend/src/services/: apiService.js
instageo/new_apps/frontend/src/utils/: authErrors.js  logger.js  modelsCache.js  pdfReport.js  segmentationColors.js
ml_research_template/: module.py  module_test.py
notebooks/: InstaGeo_Demo.ipynb  chip_creator_demo.ipynb  data_cleaner_demo.ipynb  data_splitter_demo.ipynb  raster_chip_creator_demo.ipynb
scripts/: deploy.sh  start_app_stack.sh
tests/: conftest.py
tests/apps_tests/: test_viz.py
tests/data/: HLS.S30.T38PMB.2022145T072618.v2.0.B02.tif  chip_178_022.mask.tif  chip_178_022.tif  fmask.tif  sample.csv  sample.tif  sample_4326.csv  test_breeding_data.csv
tests/data_tests/: test_chip_creator.py  test_create_chips.py  test_data_pipeline.py  test_geo_utils.py  test_hls_pipeline.py  test_hls_utils.py  test_raster_chip_creator.py  test_s1_utils.py  test_s2_pipeline.py  test_s2_utils.py  test_stac_utils.py
tests/model_tests/: test_dataloader.py  test_infer_utils.py  test_inference_pipeline.py  test_metrics.py  test_model.py  test_pipeline_utils.py  test_run.py  test_sliding_window_inference.py  test_utils.py
